Refactoring and instructions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,14 @@
 
     {% include header.html %}
 
-    <div class="page-content">
+    <section class="main-content">
       <div class="wrapper">
         {{ content }}
       </div>
-    </div>
-
     {% include footer.html %}
+    </section>
+
+
 
   </body>
 
