--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/stylesheets/normalize.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/stylesheets/stylesheet.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/stylesheets/github-light.css" | prepend: site.baseurl }}">
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
+
